# test_unitaire_09jan

./: .coverage  Python Unit Testing and Code Coverage.url  Python unittest Assertions Cheat Sheet - Kapeli.url  calcul.py  coverage.xml  pyproject.toml  test__calcul_pytest.py  test_calcul_unitest.py  test_calcul_unittest.py
.github/workflows/: Run_Pytest_on_push.yml  python-package.yml
Exemple_conf_integrationcontinue/: Run_Pytest_on_push.yml
