[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "nom_de_votre_projet"
version = "0.1.0"
description = "Description de votre projet"
authors = ["Votre Nom <votre@email.com>"]

[tool.poetry.dependencies]
python = "^3.6"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
